--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -1,4 +1,4 @@
-/* .container{
+.container{
  width: 100%;
  height: 100dvh;
  margin: 0 auto;
@@ -20,7 +20,7 @@
     min-height: 250px;
     max-height: 500px;
     border: 1px solid #ddd;
-    border-radius: 12px;
+    border-radius: 4px;
     position: relative;
     background-color: #33333388;
    backdrop-filter: blur(12px);
@@ -50,6 +50,162 @@
   margin: 0 auto;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .2px;
+  letter-spacing: 1px;
+  font-weight: 300;
+  color: white;
 
-} */
+
+}
+
+.container .boxrelative .boxform .rigth p, .container .boxrelative .boxform .left p{
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    font-weight: 300;
+    color: white;
+    font-size: .8rem;
+  
+  
+  }
+
+  .container .boxrelative .boxform .rigth button, .container .boxrelative .boxform .left button{
+    width: 100%;
+    max-width: 150px;
+    padding: 7px 21px;
+    margin: 0 auto;
+    text-align: center;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    font-weight: 500;
+    color: white;
+    font-size: 1rem;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    position: relative;
+    transition: all .7s ease-in-out;
+  }
+
+  .container .boxrelative .boxform .rigth button::after, .container .boxrelative .boxform .left button::after{
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #222;
+    z-index: -1;
+    transition: all .7s ease-in-out;
+
+
+  }
+
+  .container .boxrelative .boxform .rigth button:hover::after, .container .boxrelative .boxform .left button:hover::after{
+    width: 100%;
+  }
+
+  .form{
+ width: 100%;
+ max-width: 200px;
+ min-height: 300px;
+ max-height: 500px;
+ margin: 0 auto;
+ border: 1px solid #aaa;
+ padding: 1rem;
+ position: absolute;
+ top: 50%;
+ left: 20%;
+ transform: translate(-50%, -50%);
+ background-color: #333;
+ z-index: 5;
+  }
+
+  .form .boxcontentform{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+  }
+
+  .form .boxcontentform h2{
+    width: 100%;
+    margin: 0 auto;
+    text-transform: capitalize;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-top: 1rem;
+    color: white;
+  }
+
+  .form .boxcontentform div:nth-child(2){
+   margin-top: 4rem;
+  }
+
+  .form .boxinput{
+     display: flex;
+     justify-content: center;
+     align-items: start;
+     flex-direction: column;
+     margin-top: 20px;
+  }
+
+  .form .boxinput label{
+   color: #aaa;
+   text-transform: capitalize;
+ }
+
+ .form .boxinput input{
+    border: 1px solid #aaa;
+    height: 0px;
+    transition: all .5s ease-in-out;
+
+  }
+
+  .form .boxinput input:focus{
+    height: 100%;
+  }
+
+  .form .boxcontentform button{
+    width: 100%;
+    margin: 0 auto;
+    padding: 7px 21px;
+    border: 1px solid #aaa;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    margin-top: 1.2rem;
+    cursor: pointer;
+    position: relative;
+   color: white;
+   background-color: transparent;
+   
+  }
+
+  .form .boxcontentform button::after{
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #222;
+    z-index: -1;
+    transition: all .7s ease-in-out;
+    
+  }
+
+  .form .boxcontentform button:hover::after{
+    width: 100%;
+
+  }
+
+
+
+
+
+
