--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,8 @@
 
 body{
   font-size: 65%;
-  font-family: sans-serif;
+    font-family: "Poppins", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  
 }
